style: 装箱构造器改用 valueOf，避免多余对象创建
- BaseMap#getLong：new Long(v.toString()) → Long.valueOf(v.toString())
- ImportController 导入生成采购单：new Double(0) → Double.valueOf(0)

仅代码风格调整，不改变任何功能与方法签名。